# wastickers-packer

./: .gitignore  LICENSE  README.md  RELEVANT_LINKS.md  TODO.MD  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: bench_e2e.py  conftest.py  test_cli.py  test_grouping.py  test_report.py  test_scan.py  test_wastickers.py
wastickers_packer/: cli.py  exceptions.py  grouping.py  report.py  scan.py  wastickers.py
whatsappsticker/: cli.py  exceptions.py  grouping.py  report.py
